images-security/openshift/devspaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-devspaces
