images-security/openshift/pipeline.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: images-security
